--- a/writedown/npt-neq/ref.bib
+++ b/writedown/npt-neq/ref.bib
@@ -122,6 +122,19 @@
   timestamp = {2014.01.17}
 }
 
+@ARTICLE{gfeller2007complex,
+  author = {Gfeller, D and De Los Rios, P and Caflisch, A and Rao, F},
+  title = {Complex network analysis of free-energy landscapes},
+  journal = {Proceedings of the National Academy of Sciences},
+  year = {2007},
+  volume = {104},
+  pages = {1817--1822},
+  number = {6},
+  file = {gfeller2007complex.pdf:gfeller2007complex.pdf:PDF;:gfeller2007complex.si.pdf:PDF},
+  publisher = {National Acad Sciences},
+  timestamp = {2014.01.17}
+}
+
 @INPROCEEDINGS{ciccotti1993theoretical,
   author = {Ciccotti, G. and Pierleoni, C. and Ryckaert, J.P.},
   title = {Theoretical foundation and rheological application of non-equilibrium
