--- a/writedown/npt-neq/ref.bib
+++ b/writedown/npt-neq/ref.bib
@@ -134,6 +134,38 @@
   publisher = {National Acad Sciences},
   timestamp = {2014.01.17}
 }
+@article{green1954markoff,
+  title={Markoff Random Processes and the Statistical Mechanics of Time-Dependent Phenomena. II. Irreversible Processes in Fluids},
+  author={Green, Melville S},
+  journal={Journal of Chemical Physics},
+  volume={22},
+  pages={398--413},
+  year={1954},
+  publisher={AIP Publishing}
+}
+@article{kubo1957statistical,
+  title={{Statistical-mechanical theory of irreversible processes. I. General theory and simple applications to magnetic and conduction problems}},
+  author={Kubo, Ryogo},
+  journal={Journal of the Physical Society of Japan},
+  volume={12},
+  number={6},
+  pages={570--586},
+  year={1957},
+  publisher={The Physical Society of Japan}
+}
+
+@BOOK{tuckeman2010statistical,
+  title = {Statistical Mechanics: Theory and Molecular Simulation},
+  publisher = {Oxford University Press, USA},
+  year = 2010,
+  author = {Tuckerman, M.E.},
+  file = {tuckeman2010statistical.pdf:tuckeman2010statistical.pdf:PDF},
+  timestamp = {2010.07.19},
+page=499
+}
+
+
+
 
 @INPROCEEDINGS{ciccotti1993theoretical,
   author = {Ciccotti, G. and Pierleoni, C. and Ryckaert, J.P.},
