--- a/writedown/npt-neq/reply/reply.tex
+++ b/writedown/npt-neq/reply/reply.tex
@@ -74,7 +74,7 @@ mechanics (e.g.~M.~Tuckerman \emph{Statistical Mechanics: Theory and
   Molecular Simulation}, pp.~499).  We plot the correlation function
 $\langle j(0)\cdot \chi_{_C}(t) \rangle_0$ against corrlation time $t$
 in Fig.~\ref{fig:tmp1} of this reply. The value of the function is estimated from
-two independent equilibrium simulation, and the trajactory of each is
+two independent equilibrium simulations, and the trajactory of each is
 of 1~$\mu$s. Please note that the total length of the equilibrium
 trajactories is the same as the non-equilibrium simulation (2000
 trajactories, each 1000~ps long).
@@ -95,7 +95,8 @@ simulation, we conclude that non-equilibrium simulatoin is more
 precise than the conventional equilibrium approach (linear response) at the same computational cost.
 A similar
 observation has already been reported by Ciccotti and Jacucci, PRL
-1975.
+1975. We have added the comparison between our non-equilibrium
+simulation and the linear response thoery to an appendix of the manuscript.
 \\
 % Another limit of the linear response theory is that it can only be
 % used to calculate the non-equilibrium properties when the
@@ -294,7 +295,9 @@ directly to the results reported here. See work by Plusquellic et al
 The frequency investigated in our manuscript is from 5~GHz to 100~GHz,
 the largest of which is still one order of magnitude smaller than the
 terahertz spectroscopy. Therefore, we find our simulation results
-cannot be directly compared with the terahertz experiments.\\
+cannot be directly compared with the terahertz experiments.
+\recheck{please say something here}.
+\\
 
 \emph{ The procedure for controlling the temperature under neq
   conditions is reminiscent of the ``stochastic boundary conditions''
@@ -339,12 +342,15 @@ We have made corresponding changes to the manuscript.\\
   1999 article. It should be possible to relate the probability fluxes
   to free energy differences.}\\
 
-This is indeed a very interesting point. Although the Fig.11 is
-plotted for the non-equilibrium oscillatory EF case, the
-confromational transition pathways are qulitatively comparable to the
-previous works on the transition pathways studied in equilibrium.
-Both the connectivity of conformations and the relatively strength of
-the transitions are similar. A short comment has been added to the
+This is indeed a very interesting point.
+Although the network presented Fig.11 is similar to those
+discovered in the mentioned equilibrium studies,
+in the sense of the steady conformations and connections among them,
+the physical meaning is quit different in our study:
+The system is under the nonequilibrium condition, and
+the fluxes are directional and lasting (although the averged population of the steady conformations do not change). In contrast,
+such probability fluxes do not exist in the equilibrium case.
+A short comment has been added to the
 manuscript.
 
 The transition fluxes can be used to calculate the free energy only in
